--- a/browser.css
+++ b/browser.css
@@ -1,7 +1,6 @@
 pre {
   background-color: gray;
 }
-
 a {
   color: blue;
 }
@@ -16,4 +15,16 @@ small {
 }
 big {
   font-size: 110%;
+}
+input {
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  background-color: lightblue;
+}
+button {
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  background-color: orange;
 }
