--- a/browser.css
+++ b/browser.css
@@ -32,3 +32,13 @@ h1 {
   font-size: 40px;
   font-weight: bold;
 }
+input:focus { outline: 2px solid black; }
+button:focus { outline: 2px solid black; }
+div:focus { outline: 2px solid black; }
+a:focus { outline: 2px solid black; }
+@media (prefers-color-scheme: dark) {
+input:focus { outline: 2px solid white; }
+button:focus { outline: 2px solid white; }
+div:focus { outline: 2px solid white; }
+a:focus { outline: 2px solid white; }
+}
